--- a/roles/wordpress-setup/tasks/database-backup.yml
+++ b/roles/wordpress-setup/tasks/database-backup.yml
@@ -12,16 +12,11 @@
   cron:
     name: "{{ item.key }} WordPress BD backup cron"
     hour: "0"
+    minute: "0"
     user: "{{ web_user }}"
-    job: "cd {{ www_root }}/{{ item.key }}/{{ item.value.current_path | default('current') }} && wp db export ../db-backups/backup-`date +%Y%m%dT%H%M%S`.sql"
-    cron_file: "wordpress-bc-{{ item.key | replace('.', '_') }}"
-  with_dict: "{{ wordpress_sites }}"
-
-- name: Setup WP DB optimize cron
-  cron:
-    name: "{{ item.key }} WordPress BD optimize cron"
-    hour: "1"
-    user: "{{ web_user }}"
-    job: "cd {{ www_root }}/{{ item.key }}/{{ item.value.current_path | default('current') }} && wp db repair && wp db optimize"
-    cron_file: "wordpress-db-{{ item.key | replace('.', '_') }}"
+    job: >
+      cd {{ www_root }}/{{ item.key }}/{{ item.value.current_path | default('current') }} &&
+      wp db optimize &&
+      wp db export {{ www_root }}/{{ item.key }}/db-backups/backup-`date +%Y%m%dT%H%M%S`.sql
+    cron_file: "wordpress-backup-{{ item.key | replace('.', '_') }}"
   with_dict: "{{ wordpress_sites }}"
