--- a/deploy.yml
+++ b/deploy.yml
@@ -8,9 +8,10 @@
   remote_user: "{{ web_user }}"
 
   vars:
+    deploy_initialize-after: "{{ playbook_dir }}/deploy-hooks/initialize-after.yml"
     deploy_build_before: "{{ playbook_dir }}/deploy-hooks/build-before.yml"
     deploy_build_after: "{{ playbook_dir }}/roles/deploy/hooks/build-after.yml"
-    deploy_finalize_after: "{{ playbook_dir }}/roles/deploy/hooks/finalize-after.yml"
+    deploy_finalize_after: "{{ playbook_dir }}/deploy-hooks/finalize-after.yml"
     project: "{{ wordpress_sites[site] }}"
     project_root: "{{ www_root }}/{{ site }}"
     wordpress_env_defaults:
