--- a/deploy.yml
+++ b/deploy.yml
@@ -8,7 +8,7 @@
   remote_user: "{{ web_user }}"
 
   vars:
-    deploy_initialize-after: "{{ playbook_dir }}/deploy-hooks/initialize-after.yml"
+    # deploy_initialize_after: "{{ playbook_dir }}/deploy-hooks/initialize-after.yml"
     deploy_build_before: "{{ playbook_dir }}/deploy-hooks/build-before.yml"
     deploy_build_after: "{{ playbook_dir }}/roles/deploy/hooks/build-after.yml"
     deploy_finalize_after: "{{ playbook_dir }}/deploy-hooks/finalize-after.yml"
