[IMP] added "Update active language" hook

--- a/deploy-hooks/finalize-after.yml
+++ b/deploy-hooks/finalize-after.yml
@@ -47,6 +47,11 @@
     args:
       chdir: "{{ deploy_helper.current_path }}"
 
+  - name: Update active language
+    command: wp core language update
+    args:
+      chdir: "{{ deploy_helper.current_path }}"
+
   when: wp_installed | success
 
 - name: Reload php-fpm
