--- a/roles/deploy/defaults/main.yml
+++ b/roles/deploy/defaults/main.yml
@@ -56,6 +56,9 @@ project_local_path: "{{ (lookup('env', 'USER') == 'vagrant') | ternary(project_r
 
 # Deploy hooks
 # For list of hooks and explanation, see https://roots.io/trellis/docs/deploys/#hooks
+deploy_initialize_after:
+  # - "{{ playbook_dir }}/deploy-hooks/initialize-after.yml"
+
 deploy_build_before:
   - "{{ playbook_dir }}/deploy-hooks/build-before.yml"
 
@@ -67,4 +70,5 @@ deploy_finalize_before:
   - "{{ playbook_dir }}/roles/deploy/hooks/finalize-before.yml"
 
 deploy_finalize_after:
+  - "{{ playbook_dir }}/deploy-hooks/finalize-after.yml"
   - "{{ playbook_dir }}/roles/deploy/hooks/finalize-after.yml"
