--- a/roles/deploy/defaults/main.yml
+++ b/roles/deploy/defaults/main.yml
@@ -33,6 +33,8 @@ project_templates:
 project_shared_children:
   - path: web/app/uploads
     src: uploads
+  - path: web/app/languages
+    src: languages
 
 # The project_environment is a list of environment variables that can be used in hooks
 # Example:
