--- a/roles/wordpress-setup/tasks/maintenance.yml
+++ b/roles/wordpress-setup/tasks/maintenance.yml
@@ -17,7 +17,7 @@
     job: >
       cd {{ www_root }}/{{ item.key }}/{{ item.value.current_path | default('current') }} &&
       wp db optimize &&
-      wp db export {{ www_root }}/{{ item.key }}/backups/backup-`date +\%Y\%m\%dT\%H\%M\%S`.sql
+      wp db export - | gzip > {{ www_root }}/{{ item.key }}/backups/backup-`date +\%Y\%m\%dT\%H\%M\%S`.sql.gz
     cron_file: "wordpress-{{ item.key | replace('.', '_') }}"
   with_dict: "{{ wordpress_sites }}"
 
