--- a/server.yml
+++ b/server.yml
@@ -48,5 +48,6 @@
   - role: unattended
     unattended_mail: '{{ mail_admin }}'
     unattended_mail_only_on_error: true
+    unattended_automatic_reboot: true
     unattended_automatic_reboot_time: '05:{{ 60 | random }}'
     tags: [upgrades]
