--- a/roles/wordpress-setup/tasks/maintenance.yml
+++ b/roles/wordpress-setup/tasks/maintenance.yml
@@ -8,14 +8,31 @@
     state: directory
   with_dict: "{{ wordpress_sites }}"
 
+# - name: Setup WP Woocommerce maintenance cron
+#   cron:
+#     name: "{{ item.key }} Woocommerce maintenance cron"
+#     hour: "4"
+#     minute: "1"
+#     user: "{{ web_user }}"
+#     job: >
+#       cd {{ www_root }}/{{ item.key }}/{{ item.value.current_path | default('current') }} &&
+#       wp wc tool run clear_expired_transients --user=admin.creame &&
+#       wp wc tool run delete_orphaned_variations --user=admin.creame &&
+#       wp wc tool run clear_expired_download_permissions --user=admin.creame &&
+#       wp wc tool run recount_terms --user=admin.creame &&
+#       wp wc tool run add_order_indexes --user=admin.creame
+#     cron_file: "wordpress-{{ item.key | replace('.', '_') }}"
+#   with_dict: "{{ wordpress_sites }}"
+
 - name: Setup WP DB backup cron
   cron:
     name: "{{ item.key }} WordPress BD backup cron"
     hour: "4"
-    minute: "0"
+    minute: "6"
     user: "{{ web_user }}"
     job: >
       cd {{ www_root }}/{{ item.key }}/{{ item.value.current_path | default('current') }} &&
+      wp transient delete --expired &&
       wp db optimize &&
       wp db export - | gzip > {{ www_root }}/{{ item.key }}/backups/backup-`date +\%Y\%m\%dT\%H\%M\%S`.sql.gz
     cron_file: "wordpress-{{ item.key | replace('.', '_') }}"
