--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -11,6 +11,21 @@ www_root: /srv/www
 ip_whitelist:
   - "{{ (env == 'development') | ternary(ansible_default_ipv4.gateway, ipify_public_ip | default('')) }}"
 php_memory_limit: 256M
+wp_cli_packages:
+  - wp-cli/doctor-command
+  - wp-cli/profile-command
+
+# Custom deploy hooks
+deploy_initialize_after:
+  - "{{ playbook_dir }}/deploy-hooks/initialize-after.yml"
+
+deploy_build_after:
+  - "{{ playbook_dir }}/deploy-hooks/build-after.yml"
+  - "{{ playbook_dir }}/roles/deploy/hooks/build-after.yml"
+
+deploy_finalize_after:
+  - "{{ playbook_dir }}/deploy-hooks/finalize-after.yml"
+  - "{{ playbook_dir }}/roles/deploy/hooks/finalize-after.yml"
 
 # Values of raw_vars will be wrapped in `{% raw %}` to avoid templating problems if values include `{%` and `{{`.
 # Will recurse dicts/lists. `*` is wildcard for one or more dict keys, list indices, or strings. Example:
