--- a/group_vars/all/vault.yml
+++ b/group_vars/all/vault.yml
@@ -1,3 +1,3 @@
 # Documentation: https://roots.io/trellis/docs/vault/
 vault_mail_password: smtp_password
-vault_creame_password: packages_creame_password
+# vault_creame_password: packages_creame_password
