--- a/roles/wordpress-install/tasks/main.yml
+++ b/roles/wordpress-install/tasks/main.yml
@@ -34,6 +34,33 @@
   when: item.value.packagist_token is defined
   with_dict: "{{ wordpress_sites }}"
 
+# This don't work :_(
+# - name: Setup packages.crea.me authentication
+#   composer:
+#     global_command: yes
+#     command: config
+#     arguments: http-basic.packages.crea.me creame {{ vault_creame_password }}
+#   when: vault_creame_password is defined
+
+- block:
+  - name: Create .composer directory
+    file:
+      path: "/home/{{ ansible_user }}/.composer"
+      state: directory
+      owner: "{{ ansible_user }}"
+      group: "{{ ansible_user }}"
+      mode: "0775"
+
+  - name: Create auth.json for packages.crea.me authentication
+    template:
+      src: "auth.json.j2"
+      dest: "/home/{{ ansible_user }}/.composer/auth.json"
+      owner: "{{ ansible_user }}"
+      group: "{{ ansible_user }}"
+      mode: "0665"
+
+  when: vault_creame_password is defined
+
 - name: Install Dependencies with Composer
   composer:
     no_dev: no
