--- a/uploads.yml
+++ b/uploads.yml
@@ -1,35 +1,42 @@
 ---
-- name: Sync uploads between environments
-  hosts: web
+- name: Sync {{ site }} UPLOADS between development <-> {{ env }} environments
+  hosts: web:&{{ env }}
   remote_user: "{{ web_user }}"
 
   vars:
     project: "{{ wordpress_sites[site] }}"
-    project_root: "{{ www_root }}/{{ site }}"
+    project_current: "{{ www_root }}/{{ site }}/current"
+    project_local_path: "{{ (lookup('env', 'USER') == 'vagrant') | ternary(project_current, project.local_path) }}"
 
   tasks:
-  # ansible-playbook uploads.yml -i hosts/staging --extra-vars="site=example.com mode=push"
-  - name: Push uploads
-    synchronize:
-      src: "{{ project.local_path }}/web/app/uploads/"
-      dest: "{{ project_root }}/current/web/app/uploads/"
-      rsync_opts: --exclude=.DS_Store
-    when: mode is not defined or mode == "push"
+  - name: Abort if environment variable is equal to development
+    fail:
+      msg: "ERROR: development is not a valid environment for this mode (you can't push/pull from development to development)."
+    when: env == "development"
 
-  # ansible-playbook uploads.yml -i hosts/staging --extra-vars="site=example.com mode=pull"
-  - name: Pull uploads
+  - name: Pull uploads from {{ env }}
     synchronize:
-      src: "{{ project_root }}/current/web/app/uploads/"
-      dest: "{{ project.local_path }}/web/app/uploads/"
+      src: "{{ project_current }}/web/app/uploads/"
+      dest: "{{ project_local_path }}/web/app/uploads/"
       mode: pull
+      recursive: yes
       rsync_opts: --exclude=.DS_Store
-    when: mode is defined and mode == "pull"
+    when: mode is not defined or mode == "pull"
 
-  # ansible-playbook uploads.yml -i hosts/staging --extra-vars="site=example.com mode=loco"
+  - name: Push uploads to {{ env }}
+    synchronize:
+      src: "{{ project_local_path }}/web/app/uploads/"
+      dest: "{{ project_current }}/web/app/uploads/"
+      mode: push
+      recursive: yes
+      rsync_opts: --exclude=.DS_Store
+    when: mode is defined and mode == "push"
+
   - name: Pull Loco translations
     synchronize:
-      src: "{{ project_root }}/current/web/app/languages/loco/"
-      dest: "{{ project.local_path }}/web/app/languages/loco/"
+      src: "{{ project_current }}/web/app/languages/loco/"
+      dest: "{{ project_local_path }}/web/app/languages/loco/"
       mode: pull
+      recursive: yes
       rsync_opts: --exclude=.DS_Store
     when: mode is defined and mode == "loco"
