--- a/server.yml
+++ b/server.yml
@@ -47,4 +47,5 @@
     unattended_mail_only_on_error: true
     unattended_automatic_reboot: true
     unattended_automatic_reboot_time: '05:{{ 60 | random }}'
+    unattended_remove_unused_dependencies: true
     tags: [upgrades]
