[IMP] wp-cli version

--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -19,6 +19,7 @@ nginx_wordpress_site_conf: nginx-includes/wordpress-site.conf.child
 php_memory_limit: 256M
 # php_extensions_custom:
 #   php7.3-soap: "{{ apt_package_state }}"
+wp_cli_version: 2.2.0
 wp_cli_packages:
   - wp-cli/doctor-command
   - wp-cli/profile-command
