--- a/deploy-hooks/finalize-after.yml
+++ b/deploy-hooks/finalize-after.yml
@@ -37,6 +37,12 @@
       chdir: "{{ deploy_helper.current_path }}"
     when: project.update_db_on_deploy | default(update_db_on_deploy) and project.woocommerce | default(false)
 
+  - name: Update Elementor database
+    shell: wp cli has-command "elementor" && [ $? -eq 0 ] && wp elementor update db
+    args:
+      chdir: "{{ deploy_helper.current_path }}"
+    when: project.update_db_on_deploy | default(update_db_on_deploy)
+
   - name: Install core language es_ES
     command: wp language core install es_ES
     args:
