--- a/group_vars/staging/wordpress_sites.yml
+++ b/group_vars/staging/wordpress_sites.yml
@@ -18,5 +18,5 @@ wordpress_sites:
       enabled: true
       provider: letsencrypt
     cache:
-      enabled: true
+      enabled: false
     woocommerce: false
