--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -16,6 +16,7 @@ ip_whitelist:
   - "{{ (env == 'development') | ternary(ansible_default_ipv4.gateway, ipify_public_ip | default('')) }}"
 nginx_conf: nginx-includes/nginx.conf.child
 nginx_wordpress_site_conf: nginx-includes/wordpress-site.conf.child
+nginx_skip_cache_cookie: comment_author|wordpress_[a-f0-9]+|wp-postpass|wordpress_no_cache|wordpress_logged_in|woocommerce_[a-z0-9_]+
 php_memory_limit: 256M
 # php_extensions_custom:
 #   php7.3-soap: "{{ apt_package_state }}"
