--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -18,8 +18,9 @@ nginx_conf: nginx-includes/nginx.conf.child
 nginx_wordpress_site_conf: nginx-includes/wordpress-site.conf.child
 nginx_skip_cache_cookie: comment_author|wordpress_[a-f0-9]+|wp-postpass|wordpress_no_cache|wordpress_logged_in|woocommerce_[a-z0-9_]+
 php_memory_limit: 256M
-# php_extensions_custom:
-#   php7.3-soap: "{{ apt_package_state }}"
+php_extensions_custom:
+  php7.3-imagick: "{{ apt_package_state }}"
+  # php7.3-soap: "{{ apt_package_state }}"
 wp_cli_packages:
   - wp-cli/doctor-command
   - wp-cli/profile-command
