--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -12,20 +12,26 @@ apt_packages_custom:
 ntp_timezone: Etc/UTC
 ntp_manage_config: true
 www_root: /srv/www
-ip_whitelist:
-  - "{{ (env == 'development') | ternary(ansible_default_ipv4.gateway, ipify_public_ip | default('')) }}"
+
+# Nginx
 nginx_conf: nginx-includes/nginx.conf.child
 nginx_wordpress_site_conf: nginx-includes/wordpress-site.conf.child
 nginx_skip_cache_cookie: comment_author|wordpress_[a-f0-9]+|wp-postpass|wordpress_no_cache|wordpress_logged_in|woocommerce_[a-z0-9_]+
+
+# PHP
 php_memory_limit: 256M
 php_extensions_custom:
   php7.4-imagick: "{{ apt_package_state }}"
   # php7.4-soap: "{{ apt_package_state }}"
+
+# WP-Cli
 wp_cli_packages:
   - wp-cli/doctor-command
   - wp-cli/profile-command
+
 # Disable wp option update releases path on deploy
 update_wp_theme_paths: false
+
 # Enable image optimization cron task and serve webp format
 image_optimize: true
 
