--- a/group_vars/all/helpers.yml
+++ b/group_vars/all/helpers.yml
@@ -23,5 +23,6 @@ sites_use_ssl: "{{ wordpress_sites.values() | map(attribute='ssl') | selectattr(
 # For backward compatibility, to be removed in Trellis v2.
 site_packagist_org_authentications:
   - { hostname: repo.packagist.com, username: token, password: "{{ vault_wordpress_sites[site].packagist_token | default('') }}" }
+  - { hostname: packages.crea.me, username: creame, password: "{{ vault_creame_password | default('') }}" }
 site_composer_authentications: "{{ vault_wordpress_sites[site].composer_authentications | default([]) }}"
 composer_authentications: "{{ site_packagist_org_authentications + site_composer_authentications }}"
