--- a/group_vars/production/main.yml
+++ b/group_vars/production/main.yml
@@ -1,1 +1,12 @@
 mysql_root_password: "{{ vault_mysql_root_password }}" # Define this variable in group_vars/production/vault.yml
+
+ssmtp_revaliases:
+  - user: root
+    from: "root@{{ mail_hostname }}"
+    smtp_server: "{{ mail_smtp_server }}"
+  - user: "{{ admin_user }}"
+    from: "{{ admin_user }}@{{ mail_hostname }}"
+    smtp_server: "{{ mail_smtp_server }}"
+  - user: "{{ web_user }}"
+    from: "{{ web_user }}@{{ mail_hostname }}"
+    smtp_server: "{{ mail_smtp_server }}"
