--- a/group_vars/staging/main.yml
+++ b/group_vars/staging/main.yml
@@ -1,1 +1,12 @@
 mysql_root_password: "{{ vault_mysql_root_password }}" # Define this variable in group_vars/staging/vault.yml
+
+ssmtp_revaliases:
+  - user: root
+    from: "root@cocinilla.me"
+    smtp_server: "{{ mail_smtp_server }}"
+  - user: "{{ admin_user }}"
+    from: "{{ admin_user }}@cocinilla.me"
+    smtp_server: "{{ mail_smtp_server }}"
+  - user: "{{ web_user }}"
+    from: "{{ web_user }}@cocinilla.me"
+    smtp_server: "{{ mail_smtp_server }}"
