--- a/roles/ssmtp/defaults/main.yml
+++ b/roles/ssmtp/defaults/main.yml
@@ -3,13 +3,13 @@ ssmtp_auth_method: LOGIN
 ssmtp_from_override: 'Yes'
 ssmtp_start_tls: 'Yes'
 ssmtp_tls: 'Yes'
-ssmtp_revaliases:
-  - user: root
-    from: "root@{{ mail_hostname }}"
-    smtp_server: "{{ mail_smtp_server }}"
-  - user: "{{ admin_user }}"
-    from: "{{ admin_user }}@{{ mail_hostname }}"
-    smtp_server: "{{ mail_smtp_server }}"
-  - user: "{{ web_user }}"
-    from: "{{ web_user }}@{{ mail_hostname }}"
-    smtp_server: "{{ mail_smtp_server }}"
+# ssmtp_revaliases:
+#   - user: root
+#     from: from@example.com
+#     smtp_server: "{{ mail_smtp_server }}"
+#   - user: "{{ admin_user }}"
+#     from: from@example.com
+#     smtp_server: "{{ mail_smtp_server }}"
+#   - user: "{{ web_user }}"
+#     from: from@example.com
+#     smtp_server: "{{ mail_smtp_server }}"
